# ET

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/et/: derivative.hpp  expr.hpp  graphviz.hpp  math.hpp  placeholders.hpp  print.hpp  type_name.hpp
src/: print.cpp
test/: derivative_test.cpp  et_test.cpp
